deploy: 6f4adf509db45a6020a5adf6f064e96ce415dba6

--- a/Board/Members.html
+++ b/Board/Members.html
@@ -268,8 +268,8 @@
 <p>The following are the members of <strong>Board 6</strong>.</p>
 <ul class="simple">
 <li><p><strong>CEO/President</strong>: Ethan Charoenpitaks (co26)</p></li>
-<li><p><strong>Vice President</strong> and <strong>Chief Technical Officer</strong>: Cinna Davis (co27)</p></li>
-<li><p><strong>Chief Services Officer</strong>: Saaki Bhojanam (co27)</p></li>
+<li><p><strong>Vice President</strong> and <strong>Chief Services Officer</strong>: Cinna Davis (co27)</p></li>
+<li><p><strong>Chief Technical Officer</strong>: Saaki Bhojanam (co27)</p></li>
 <li><p><strong>Chief Financial Officer/Treasurer</strong>: Krithik Senthilkumar (co27)</p></li>
 <li><p><strong>Chief Relations Officer</strong>: Atharv Kanchi (co27)</p></li>
 <li><p><strong>Senior Representative</strong>: Andrew Bae (co26)</p></li>
